Oct 2nd, 2021: Alex Burger <alex_b@users.sourceforge.net>
- Fixed a bug that prevented the hostname from being extraced when IPv6 is 
  disabled and the hostname is passed from Net-SNMP as
  UDP: [x.x.x.x]:xxxx->[x.x.x.x]:xxxx.  Thanks to Danilo Godec for the fix.
  (issue #3).
- Fixed a bug with IPv6 address handling for NODES in snmptt.conf.
- Add --preexec and --preexec_file options to snmpttconvertmib.  Feature
  request from issue #4 by Andrew Shark.
- Fixed debug output bug with snmptthandler-embedded.  Thanks to
  kazuo ito for the fix.  PR #1.
- Added PREEXEC support for unknown traps.  Results are stored in the
  variable $pun.  See the unknown_trap_preexec setting in snmptt.ini.
  Feature request from issue #3 by Andrew Shark.

July 19th, 2021: Alex Burger <alex_b@users.sourceforge.net>
- Fixed a bug that prevented snmptt from starting when debug mode was disabled
  (bug 48).

April 11th, 2021: Alex Burger <alex_b@users.sourceforge.net>
- Log skipped trap statistics only when unknown_trap_nodes_match_mode = 1.

April 2nd, 2021: Alex Burger <alex_b@users.sourceforge.net>
- Added unknown_trap_nodes_match_mode setting to allow you to change how
  traps are handled when they do not match due to MATCH and NODES.  If set to 1,
  traps are considered skipped instead of unknown.  Statistics now include the
  number of skipped traps.  Thanks to Andrew Choo for the code.
- Fixed a Perl warning issue with syslog logging.
- Varbind types Gauge32 and Hex-STRING now have the 'Gauge32: ' and
  'Hex-STRING: ' text removed for incoming traps in snmptthandler-embedded
  along with unicode line endings (Perl 5.10 and higher).  Thanks to Andrew
  Choo for the code.
- Added remote syslog support using the Perl module Log::Syslog::Fast and
  Log::Syslog::Constants.
- Added log_format snmptt.ini setting to allow you to define the STDOUT, text
  log and eventlog text format.
- Added syslog_format snmptt.ini setting to allow you to define the syslog text
  format.