@@ -1,6 +1,6 @@
-March 25th, 2021
+November 27th, 2021
 
-snmptt_1.5beta1.tgz:
+snmptt_1.5beta2.tgz:
 
 -fresh git checkout
 
@@ -31,7 +31,7 @@ cd snmptt-git
 -update docs/build
 
 -update ChangeLog with release info
- Changed version to snmptt_1.5beta1 for release
+ Changed version to snmptt_1.5beta2 for release
 
 cd snmptt/docs
 chmod +x markdown-to-html.py
@@ -55,7 +55,7 @@ perl -c snmpttconvertmib
 perl -c snmptthandler
 perl -c snmptthandler-embedded
 
-git commit -a -m "Prepare for 1.5beta1 release"
+git commit -a -m "Prepare for 1.5beta2 release"
 git push
 
 -check out fresh copy
@@ -67,12 +67,12 @@ git config user.email
 git config -l
 
 -tag with new version:
- git tag -a snmptt_1-5beta1 -m "Changed version to snmptt_1.5beta1 for release"
+ git tag -a snmptt_1-5beta2 -m "Changed version to snmptt_1.5beta2 for release"
  git push --tags
 
 cd snmptt
-find . -type f | grep -v '.git' | cpio -pdm ../snmptt_1.5beta1
-cd ../snmptt_1.5beta1
+find . -type f | grep -v '.git' | cpio -pdm ../snmptt_1.5beta2
+cd ../snmptt_1.5beta2
 sudo su
 rm -f docs/build
 rm -f docs/markdown-to-html.py
@@ -93,8 +93,8 @@ chmod +x snmptt-net-snmp-test
 chmod +x snmptt-init.d
 chown root.root * -R
 cd ..
-chmod 775 snmptt_1.5beta1
-tar cvfz snmptt_1.5beta1.tgz snmptt_1.5beta1
+chmod 775 snmptt_1.5beta2
+tar cvfz snmptt_1.5beta2.tgz snmptt_1.5beta2
 
 SourceForge:
 -upload file & set as default download
