@@ -12,7 +12,7 @@ name="GENERATOR" />
 </head></p>
 <h1>SNMP Trap Translator v1.5beta2</h1>
 <p><strong>(<a href="http://www.snmptt.org">SNMPTT</a>)</strong></p>
-<p>This file was last updated on: April 11th, 2021</p>
+<p>This file was last updated on: November 27th, 2021</p>
 <p><a href="#License">License</a></p>
 <p><a href="#What-is-it">SNMPTT</a></p>
 <ul>
@@ -313,19 +313,24 @@ table {
 <li>SNMPTT only requires the Net-SNMP Perl module if you want to have variable names translated into symbolic form, you want to be able to have <strong>snmptrapd</strong> pass traps using symbolic form, or you enable the options <strong>translate_integers</strong>, <strong>translate_trap_oid</strong> or <strong>translate_oids</strong>. Although not required, using the Perl module is recommended.  It is also required if you want to use the <strong>snmptthandler-embedded</strong> trap handler with snmptrapd.</li>
 </ul>
 <h1><a name="Whats-New"></a>What's New</h1>
-<h2><strong>v1.5beta2</strong> <strong>- March 25th, 2021</strong></h2>
+<h2><strong>v1.5beta2</strong> <strong>- November 27th, 2021</strong></h2>
 <ul>
-<li>Added <strong>unknown_trap_nodes_match_mode</strong> setting to allow you to change how
-  traps are handled when they do not match due to MATCH and NODES.  If set to 1,
-  traps are considered skipped instead of unknown.  Statistics now include the
-  number of skipped traps when enabled.</li>
-<li>Added support for wildcards for the <strong>snmptt_conf_files</strong> setting in <strong>snmptt.ini</strong>.  Example: /etc/snmp/snmptt.*.conf</li>
-<li>Added <strong>log_format</strong> snmptt.ini setting to allow you to define the STDOUT, text log and eventlog text format.</li>
-<li>Added <strong>syslog_format</strong> snmptt.ini setting to allow you to define the syslog text format.  This will allow you to add a structured data section for RFC5424 syslog.</li>
+<li>Added PREEXEC support for unknown traps.  Results are stored in the variable <strong>$pu<em>n</em></strong>.  See the <strong>unknown_trap_preexec</strong> setting in <strong>snmptt.ini</strong>.</li>
+<li>Added <strong>unknown_trap_nodes_match_mode</strong> setting to allow you to change how traps are handled when they do not match due to <strong>MATCH</strong> and <strong>NODES</strong>.  If set to 1, traps are considered skipped instead of unknown.  Statistics now include the number of skipped traps when enabled.</li>
+<li>Added support for wildcards for the <strong>snmptt_conf_files</strong> setting in <strong>snmptt.ini</strong>.  Example: <strong>/etc/snmp/snmptt.*.conf</strong></li>
+<li>Added <strong>log_format</strong> <strong>snmptt.ini</strong> setting to allow you to define the STDOUT, text log and eventlog text format.</li>
+<li>Added <strong>syslog_format</strong> <strong>snmptt.ini</strong> setting to allow you to define the syslog text format.  This will allow you to add a structured data section for RFC5424 syslog.</li>
 <li>Added variable substitution <strong>$j</strong> to pull out the enterprise number from the full enterprise OID.  For example, for enterprise OID .1.3.6.1.4.1.232, <strong>$j</strong> would
   contain 232.</li>
 <li>Added remote syslog support using the Perl module Log::Syslog::Fast which also allows you to specify the APP-NAME for RFC5424 syslog.
-  Added the following snmptt.ini settings: <strong>syslog_module</strong>, <strong>syslog_remote_dest</strong>, <strong>syslog_remote_port</strong>, <strong>syslog_remote_proto</strong>, <strong>syslog_rfc_format</strong>, <strong>syslog_app</strong> and <strong>syslog_system_app</strong>.</li>
+  Added the following <strong>snmptt.ini</strong> settings: <strong>syslog_module</strong>, <strong>syslog_remote_dest</strong>, <strong>syslog_remote_port</strong>, <strong>syslog_remote_proto</strong>, <strong>syslog_rfc_format</strong>, <strong>syslog_app</strong> and <strong>syslog_system_app</strong>.</li>
+<li>Added <strong>--preexec</strong> and <strong>-preexec_file</strong> options to s<strong>nmpttconvertmib</strong>.</li>
+<li>Added reload support to the <strong>snmptt.service</strong> systemd file.  This will allow you to use the <strong>'systemctl reload snmptt'</strong> command to reload the configuration.</li>
+<li>Fixed a bug that prevented snmptt from starting when debug mode was disabled (bug 48).</li>
+<li>Fixed debug output bug with snmptthandler-embedded (PR 1).</li>
+<li>Fixed a bug with IPv6 address handling for NODES in snmptt.conf.</li>
+<li>Fixed a bug that prevented the hostname from being extraced when IPv6 is disabled and the hostname is passed from Net-SNMP as UDP: [x.x.x.x]:xxxx-&gt;[x.x.x.x]:xxxx.</li>
+<li>Updated documentation on securing SNMPTT to ensure the snmptt user has read access to the configuration files.  This is required when issuing a reload.</li>
 <li><strong>snmptthandler-embedded</strong>:<ul>
 <li>Varbind types <strong>Gauge32</strong> and <strong>Hex-STRING</strong> now have the Gauge32: and Hex-STRING: text removed for incoming traps.  Unicode line endings are also removed (Perl 5.10 and higher).</li>
 </ul>
@@ -333,7 +338,7 @@ table {
 </ul>
 <h2><strong>v1.5beta1</strong> <strong>- March 25th, 2021</strong></h2>
 <ul>
-<li>Added support for IPv6.  To enable, set <strong>ipv6_enable = 1</strong> in snmptt.ini.</li>
+<li>Added support for IPv6.  To enable, set <strong>ipv6_enable = 1</strong> in <strong>snmptt.ini</strong>.</li>
 <li>Added support for sub-second sleep for spool folder processing.</li>
 <li><strong>snmptt.ini</strong> can now be located in <strong>/etc/snmptt</strong> and is searched for at this
   location first.</li>
@@ -356,7 +361,7 @@ table {
 <li>Fixed a bug where DNS resolution was not working for enterprise variables 
   when <strong>net_snmp_perl_enable</strong> was disabled.</li>
 <li>Changed <strong>net_snmp_perl_best_guess</strong> default from 0 to 2 as any modern system
-  should support this.  See FAQ and snmptt.ini for details on this variable.</li>
+  should support this.  See FAQ and <strong>snmptt.ini</strong> for details on this variable.</li>
 <li>Enabled Perl warnings to help ensure code is following best practices.</li>
 <li>Ran code against Perl::Critic to find non-optimal code.  Made various adjustments such as relacing bare words with variables and changing open() calls from two arguments to three.</li>
 <li>Documentation was converted from html to markdown to make it easier to maintain and a full review was completed.  Many improvments have been made including a new section on integrating with Icinga.  The docs folder now contains <strong>.md</strong>, <strong>.html</strong> and <strong>.epub</strong> versions of the documentation.</li>
@@ -383,7 +388,7 @@ but instead of SNMPTT having to replace <strong>$Fz</strong> with the FORMAT lin
 </ul>
 <h2><strong>v1.4</strong> <strong>- November 6th, 2013</strong></h2>
 <ul>
-<li>Added snmptt.ini option net_snmp_perl_cache_enable to enable caching of Net-SNMP Perl module OID and ENUM translations.  This may speed up translations and reduce CPU load when net_snmp_perl_enable and translate_* options are enabled.</li>
+<li>Added <strong>snmptt.ini</strong> option net_snmp_perl_cache_enable to enable caching of Net-SNMP Perl module OID and ENUM translations.  This may speed up translations and reduce CPU load when net_snmp_perl_enable and translate_* options are enabled.</li>
 <li>Fixed bug with snmptthandler-embedded where IP addresses and OIDs were not being detected properly because they contained 'OID:', 'IpAddress:' etc.</li>
 <li>Fixed bug with MATCH.  The PREEXEC $p variable could not be used with MATCH.  PREEXEC is now executed first if MATCH contains $p.</li>
 <li>Fixed bug with syslog.  Log entries were supposed to be logged with snmptt[pid] but instad of the pid it was actually the effective user ID (2980512).</li>
@@ -651,27 +656,21 @@ but instead of SNMPTT having to replace <strong>$Fz</strong> with the FORMAT lin
 <li>Initial release</li>
 </ul>
 <h1><a name="Upgrading"></a>Upgrading</h1>
-<h2><strong>v1.4.2 to v1.5beta2</strong></h2>
-<p>To upgrade from v1.4.2 to v1.5beta2 you should:</p>
+<h2><strong>v1.5beta1 to v1.5beta2</strong></h2>
+<p>To upgrade from v1.5beta1 to v1.5beta2 you should:</p>
 <ol>
 <li>Replace <strong>snmptt</strong> with the new version.  Make sure the file is executable (<strong>chmod +x <em>filename</em></strong>).</li>
-<li>Replace <strong>snmpttconvertmib</strong> with the new version.  Make sure the file is executable (<strong>chmod +x <em>filename</em></strong>).</li>
-<li>Backup your snmptt.ini file, replace it with the new version, and make any necessary configuration changes to it.</li>
-<li>To enable IPv6 support, set <strong>ipv6_enable = 1</strong> in <strong>snmptt.ini</strong>.</li>
-<li>To enable skipped trap statistics, set <strong>unknown_trap_nodes_match_mode = 1</strong>.  If you are logging unknown traps to a SQL table (<strong>mysql_dbi_table_unknown</strong>, <strong>postgresql_dbi_table_unknown</strong> or <strong>dbd_odbc_table_unknown</strong> is defined), also add a new column to the database table called <strong>total_skipped</strong>.</li>
-</ol>
-<p>Notes:  </p>
-<ol>
-<li>Starting with v1.5, you can use <strong>/etc/snmptt/</strong> instead of <strong>/etc/snmp/</strong> for your <strong>snmptt.ini</strong> file.  </li>
-<li>DNS now requires the Perl module <strong>IO::Socket::IP</strong>.  </li>
-<li>IPv6 requires the Perl module <strong>Net::IP</strong>.  </li>
+<li>Replace <strong>snmptthandler-embedded</strong> with the new version.  Make sure the file is executable (<strong>chmod +x <em>filename</em></strong>).</li>
+<li>For systemd systems, replace the <strong>snmptt.service</strong> service file with the new version.</li>
+<li>Backup your <strong>snmptt.ini</strong> file, replace it with the new version, and make any necessary configuration changes to it.</li>
+<li>Secure your <strong>/etc/snmp</strong> or <strong>/etc/snmptt</strong> folder as described in the <strong>Securing SNMPTT</strong> section of the documentation.</li>
 </ol>
 <h2><strong>v1.4.2 to v1.5beta1</strong></h2>
 <p>To upgrade from v1.4.2 to v1.5beta1 you should:</p>
 <ol>
 <li>Replace <strong>snmptt</strong> with the new version.  Make sure the file is executable (<strong>chmod +x <em>filename</em></strong>).</li>
 <li>Replace <strong>snmpttconvertmib</strong> with the new version.  Make sure the file is executable (<strong>chmod +x <em>filename</em></strong>).</li>
-<li>Backup your snmptt.ini file, replace it with the new version, and make any necessary configuration changes to it.</li>
+<li>Backup your <strong>snmptt.ini</strong> file, replace it with the new version, and make any necessary configuration changes to it.</li>
 <li>To enable IPv6 support, set <strong>ipv6_enable = 1</strong> in <strong>snmptt.ini</strong>. </li>
 </ol>
 <p>Notes:  </p>
@@ -706,7 +705,8 @@ but instead of SNMPTT having to replace <strong>$Fz</strong> with the FORMAT lin
 <p><strong>chown -R root.root /etc/snmp</strong></p>
 </li>
 <li><strong>chmod 755 /etc/snmp</strong></li>
-<li><strong>chmod 600 /etc/snmp/snmptt*</strong></li>
+<li><strong>chown snmptt.snmptt /etc/snmp/snmptt*</strong></li>
+<li><strong>chmod 660 /etc/snmp/snmptt*</strong></li>
 </ul>
 </li>
 </ol>
@@ -1332,9 +1332,14 @@ link /nodefaultlib /INCREMENTAL:NO /release /nologo -base:0x60000000 -machine:i3
 <p>Secure the /etc/snmp folder with</p>
 <pre><code>    chown -R root.root /etc/snmp
     chmod 755 /etc/snmp
-    chmod 600 /etc/snmp/snmptt\*
+    chown snmptt.snmptt /etc/snmp/snmptt*
+    chmod 660 /etc/snmp/snmptt*
 </code></pre>
-<p>Note:  Starting with v1.5, you can use <strong>/etc/snmptt/</strong> instead of <strong>/etc/snmp/</strong> for your <strong>snmptt.ini</strong> file.</p>
+<p>Note:  Starting with v1.5, you can use <strong>/etc/snmptt/</strong> instead of <strong>/etc/snmp/</strong> for your <strong>snmptt.ini</strong> file:</p>
+<p>Secure the /etc/snmptt folder with</p>
+<pre><code>    chown -R snmptt.snmptt /etc/snmptt
+    chmod 750 /etc/snmptt
+</code></pre>
 <p>Grant access to the log folder:  </p>
 <pre><code>    chown -R snmptt.snmptt /var/spool/snmptt
     chown -R snmptt.snmptt /var/log/snmptt
