@@ -14,7 +14,7 @@ name="GENERATOR" />
 # SNMP Trap Translator v1.5beta2
 **([SNMPTT](http://www.snmptt.org))**
 
-This file was last updated on: April 11th, 2021
+This file was last updated on: November 27th, 2021
 
 [License](#License)
 
@@ -228,25 +228,30 @@ Note:
 
 # <a name="Whats-New"></a>What's New
 
-## **v1.5beta2** **\- March 25th, 2021**
+## **v1.5beta2** **\- November 27th, 2021**
 
-* Added **unknown_trap_nodes_match_mode** setting to allow you to change how
-  traps are handled when they do not match due to MATCH and NODES.  If set to 1,
-  traps are considered skipped instead of unknown.  Statistics now include the
-  number of skipped traps when enabled.
-* Added support for wildcards for the **snmptt_conf_files** setting in **snmptt.ini**.  Example: /etc/snmp/snmptt.*.conf
-* Added **log_format** snmptt.ini setting to allow you to define the STDOUT, text log and eventlog text format.
-* Added **syslog_format** snmptt.ini setting to allow you to define the syslog text format.  This will allow you to add a structured data section for RFC5424 syslog.
+* Added PREEXEC support for unknown traps.  Results are stored in the variable **$pu*n***.  See the **unknown_trap_preexec** setting in **snmptt.ini**.
+* Added **unknown_trap_nodes_match_mode** setting to allow you to change how traps are handled when they do not match due to **MATCH** and **NODES**.  If set to 1, traps are considered skipped instead of unknown.  Statistics now include the number of skipped traps when enabled.
+* Added support for wildcards for the **snmptt_conf_files** setting in **snmptt.ini**.  Example: **/etc/snmp/snmptt.*.conf**
+* Added **log_format** **snmptt.ini** setting to allow you to define the STDOUT, text log and eventlog text format.
+* Added **syslog_format** **snmptt.ini** setting to allow you to define the syslog text format.  This will allow you to add a structured data section for RFC5424 syslog.
 * Added variable substitution **$j** to pull out the enterprise number from the full enterprise OID.  For example, for enterprise OID .1.3.6.1.4.1.232, **$j** would
   contain 232.
 * Added remote syslog support using the Perl module Log::Syslog::Fast which also allows you to specify the APP-NAME for RFC5424 syslog.
-  Added the following snmptt.ini settings: **syslog_module**, **syslog_remote_dest**, **syslog_remote_port**, **syslog_remote_proto**, **syslog_rfc_format**, **syslog_app** and **syslog_system_app**.
+  Added the following **snmptt.ini** settings: **syslog_module**, **syslog_remote_dest**, **syslog_remote_port**, **syslog_remote_proto**, **syslog_rfc_format**, **syslog_app** and **syslog_system_app**.
+* Added **--preexec** and **-preexec_file** options to s**nmpttconvertmib**.
+* Added reload support to the **snmptt.service** systemd file.  This will allow you to use the **'systemctl reload snmptt'** command to reload the configuration.
+* Fixed a bug that prevented snmptt from starting when debug mode was disabled (bug 48).
+* Fixed debug output bug with snmptthandler-embedded (PR 1).
+* Fixed a bug with IPv6 address handling for NODES in snmptt.conf.
+* Fixed a bug that prevented the hostname from being extraced when IPv6 is disabled and the hostname is passed from Net-SNMP as UDP: [x.x.x.x]:xxxx->[x.x.x.x]:xxxx.
+* Updated documentation on securing SNMPTT to ensure the snmptt user has read access to the configuration files.  This is required when issuing a reload.
 * **snmptthandler-embedded**:
     * Varbind types **Gauge32** and **Hex-STRING** now have the Gauge32: and Hex-STRING: text removed for incoming traps.  Unicode line endings are also removed (Perl 5.10 and higher).
 
 ## **v1.5beta1** **\- March 25th, 2021**
 
-* Added support for IPv6.  To enable, set **ipv6_enable = 1** in snmptt.ini.
+* Added support for IPv6.  To enable, set **ipv6_enable = 1** in **snmptt.ini**.
 * Added support for sub-second sleep for spool folder processing.
 * **snmptt.ini** can now be located in **/etc/snmptt** and is searched for at this
   location first.
@@ -269,7 +274,7 @@ Note:
 * Fixed a bug where DNS resolution was not working for enterprise variables 
   when **net_snmp_perl_enable** was disabled.
 * Changed **net_snmp_perl_best_guess** default from 0 to 2 as any modern system
-  should support this.  See FAQ and snmptt.ini for details on this variable.
+  should support this.  See FAQ and **snmptt.ini** for details on this variable.
 * Enabled Perl warnings to help ensure code is following best practices.
 * Ran code against Perl::Critic to find non-optimal code.  Made various adjustments such as relacing bare words with variables and changing open() calls from two arguments to three.
 * Documentation was converted from html to markdown to make it easier to maintain and a full review was completed.  Many improvments have been made including a new section on integrating with Icinga.  The docs folder now contains **.md**, **.html** and **.epub** versions of the documentation.
@@ -294,7 +299,7 @@ Note:
 
 ## **v1.4** **\- November 6th, 2013**
 
-*   Added snmptt.ini option net\_snmp\_perl\_cache\_enable to enable caching of Net-SNMP Perl module OID and ENUM translations.  This may speed up translations and reduce CPU load when net\_snmp\_perl\_enable and translate\_\* options are enabled.
+*   Added **snmptt.ini** option net\_snmp\_perl\_cache\_enable to enable caching of Net-SNMP Perl module OID and ENUM translations.  This may speed up translations and reduce CPU load when net\_snmp\_perl\_enable and translate\_\* options are enabled.
 *   Fixed bug with snmptthandler-embedded where IP addresses and OIDs were not being detected properly because they contained 'OID:', 'IpAddress:' etc.
 *   Fixed bug with MATCH.  The PREEXEC $p variable could not be used with MATCH.  PREEXEC is now executed first if MATCH contains $p.
 *   Fixed bug with syslog.  Log entries were supposed to be logged with snmptt\[pid\] but instad of the pid it was actually the effective user ID (2980512).
@@ -539,22 +544,15 @@ Note:
 
 # <a name="Upgrading"></a>Upgrading
 
-## **v1.4.2 to v1.5beta2**
+## **v1.5beta1 to v1.5beta2**
 
-To upgrade from v1.4.2 to v1.5beta2 you should:
+To upgrade from v1.5beta1 to v1.5beta2 you should:
 
 1.  Replace **snmptt** with the new version.  Make sure the file is executable (**chmod +x _filename_**).
-1.  Replace **snmpttconvertmib** with the new version.  Make sure the file is executable (**chmod +x _filename_**).
-1.  Backup your snmptt.ini file, replace it with the new version, and make any necessary configuration changes to it.
-1.  To enable IPv6 support, set **ipv6_enable = 1** in **snmptt.ini**.
-1.  To enable skipped trap statistics, set **unknown_trap_nodes_match_mode = 1**.  If you are logging unknown traps to a SQL table (**mysql_dbi_table_unknown**, **postgresql_dbi_table_unknown** or **dbd_odbc_table_unknown** is defined), also add a new column to the database table called **total_skipped**.
-    
-Notes:  
-
-1.  Starting with v1.5, you can use **/etc/snmptt/** instead of **/etc/snmp/** for your **snmptt.ini** file.  
-2.  DNS now requires the Perl module **IO::Socket::IP**.  
-3.  IPv6 requires the Perl module **Net::IP**.  
-
+1.  Replace **snmptthandler-embedded** with the new version.  Make sure the file is executable (**chmod +x _filename_**).
+1.  For systemd systems, replace the **snmptt.service** service file with the new version.
+1.  Backup your **snmptt.ini** file, replace it with the new version, and make any necessary configuration changes to it.
+1.  Secure your **/etc/snmp** or **/etc/snmptt** folder as described in the **Securing SNMPTT** section of the documentation.
 
 ## **v1.4.2 to v1.5beta1**
 
@@ -562,7 +560,7 @@ To upgrade from v1.4.2 to v1.5beta1 you should:
 
 1.  Replace **snmptt** with the new version.  Make sure the file is executable (**chmod +x _filename_**).
 1.  Replace **snmpttconvertmib** with the new version.  Make sure the file is executable (**chmod +x _filename_**).
-1.  Backup your snmptt.ini file, replace it with the new version, and make any necessary configuration changes to it.
+1.  Backup your **snmptt.ini** file, replace it with the new version, and make any necessary configuration changes to it.
 1.  To enable IPv6 support, set **ipv6_enable = 1** in **snmptt.ini**. 
     
 Notes:  
@@ -589,7 +587,8 @@ To upgrade from v1.4 to v1.4,1, you should:
     
     *   **chown -R root.root /etc/snmp**
     *   **chmod 755 /etc/snmp**
-    *   **chmod 600 /etc/snmp/snmptt\***
+    *   **chown snmptt.snmptt /etc/snmp/snmptt\***
+    *   **chmod 660 /etc/snmp/snmptt\***
 
 ## **v1.3 to v1.4**
 
@@ -1182,9 +1181,15 @@ Secure the /etc/snmp folder with
 
         chown -R root.root /etc/snmp
         chmod 755 /etc/snmp
-        chmod 600 /etc/snmp/snmptt\*
+        chown snmptt.snmptt /etc/snmp/snmptt*
+        chmod 660 /etc/snmp/snmptt*
 
-Note:  Starting with v1.5, you can use **/etc/snmptt/** instead of **/etc/snmp/** for your **snmptt.ini** file.
+Note:  Starting with v1.5, you can use **/etc/snmptt/** instead of **/etc/snmp/** for your **snmptt.ini** file:
+
+Secure the /etc/snmptt folder with
+
+        chown -R snmptt.snmptt /etc/snmptt
+        chmod 750 /etc/snmptt
 
 Grant access to the log folder:  
   
