@@ -1,10 +1,16 @@
+Nov 27, 2021: Alex Burger <alex_b@users.sourceforge.net>
+- Added reload support to the snmptt.service systemd file.  This will allow 
+  you to use the 'systemctl reload snmptt' command to re-load the configuration.
+- Updated documentation on securing SNMPTT to ensure the snmptt user has read
+  access to the configuration files.  This is required when issuing a reload.
+
 Oct 2nd, 2021: Alex Burger <alex_b@users.sourceforge.net>
 - Fixed a bug that prevented the hostname from being extraced when IPv6 is 
   disabled and the hostname is passed from Net-SNMP as
   UDP: [x.x.x.x]:xxxx->[x.x.x.x]:xxxx.  Thanks to Danilo Godec for the fix.
   (issue #3).
 - Fixed a bug with IPv6 address handling for NODES in snmptt.conf.
-- Add --preexec and --preexec_file options to snmpttconvertmib.  Feature
+- Added --preexec and --preexec_file options to snmpttconvertmib.  Feature
   request from issue #4 by Andrew Shark.
 - Fixed debug output bug with snmptthandler-embedded.  Thanks to
   kazuo ito for the fix.  PR #1.
